--- a/application/templates/application/medico_consultas.html
+++ b/application/templates/application/medico_consultas.html
@@ -6,9 +6,9 @@
             {% for consulta in consultas %}
             <div class="cartao-consulta">
                 <h2 class="nome-paciente">{{ consulta.paciente.nome_completo }}</h2>
-                <button class="botao-dropdown" data-dropdown-target="dropdown-{{ consulta.id }}">Ver mais</button>
-                <div class="dropdown-info" id="dropdown-{{ consulta.id }}">
-                    <p><strong>Data:</strong> {{ consulta.data|date:"d/m/Y H:i" }}</p>
+                <button class="botao-dropdown" data-dropdown-target="dropdown-consulta-{{ consulta.id }}">Ver mais</button>
+                <div class="dropdown-info" id="dropdown-consulta-{{ consulta.id }}">
+                    <p><strong>Data:</strong> {{ consulta.data|date:"d/m/Y" }}</p>
                     <p><strong>Especialidade:</strong> {{ consulta.especialidade }}</p>
                     <p><strong>Status:</strong> {{ consulta.status }}</p>
                 </div>
